# valora-engineering

./: .env.example  .gitignore  CODEX.md  ENGINEERING_GUARDRAILS.md  Makefile  PR_RULES.md  README.md  docker-compose.yml
backend/: .env.local.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: seed_dev_auth.py
backend/tests/: __init__.py  check_security.py  conftest.py  test_alias_candidate_persistence.py  test_appraised_price_decision_persistence.py  test_asset_identity_api.py  test_asset_imports.py  test_asset_variant_persistence.py  test_audit_event_foundation.py  test_auth_endpoints.py  test_auth_rbac_foundation.py  test_candidate_review_api.py  test_canonical_asset_persistence.py  test_change_request_api.py  test_change_request_persistence.py  test_check_security.py  test_check_security_blockers.py  test_db.py  test_document_engine_api.py  test_document_engine_persistence.py  test_document_intelligence_api.py  test_document_intelligence_persistence.py  test_duplicate_merge_review_persistence.py  test_evidence_library_persistence.py  test_health.py  test_identity.py  test_knowledge_evidence_api.py  test_knowledge_evidence_api_hardening.py  test_knowledge_technical_spec_persistence.py  test_master_data.py  test_master_data_api.py  test_production_config.py  test_project.py  test_project_asset_line_extension_persistence.py  test_projects_api.py  test_queue_conflict_persistence.py  test_quote_batch_line_persistence.py  test_reference_data.py  test_s12_pr_003_staging_validation.py  (+31 more)
worker/: pyproject.toml
(+390 files in other folders)
