[project]
name = "valora-worker"
version = "0.0.1"
description = "Valora worker Sprint 0 skeleton"
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
